# cufft-server

./: CMakeLists.txt  Cargo.toml  build.rs  readme.md  wrapper.h
include/: cufft_server.h
libcufft_server/: CMakeLists.txt
src/: .main.rs.swp  add.cu  cufft_server.cu  lib.rs  main.rs
